[project]
name = "prompt-eng-interactive-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "notebook>=7.6.0",
]

[dependency-groups]
dev = [
    "anthropic>=0.116.0",
    "awscli>=1.45.47",
    "boto3>=1.43.47",
    "boto3-stubs~=1.43.47",
    "botocore>=1.43.47",
    "pickleshare>=0.7.5",
]
